# LigaBwin

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  flow_chart.html  index.html  player_stats.html  pyproject.toml  team_stats.html
data/: Benfica - Braga.csv  allShotsLigaBwin2122.csv  calculations.csv
data/22-23/: allShotsLigaBwin2223.csv  calcs.csv  classification.csv  misc.csv
data/Arouca/: Arouca - Belenenses SAD.csv  Arouca - Benfica.csv  Arouca - Boavista.csv  Arouca - Braga.csv  Arouca - Estoril.csv  Arouca - Famalicao.csv  Arouca - Gil Vicente.csv  Arouca - Maritimo.csv  Arouca - Moreirense.csv  Arouca - Pacos de Ferreira.csv  Arouca - Portimonense.csv  Arouca - Porto.csv  Arouca - Santa Clara.csv  Arouca - Sporting.csv  Arouca - Tondela.csv  Arouca - Vitoria de Guimaraes.csv  Arouca - Vizela.csv  Belenenses SAD - Arouca.csv  Benfica - Arouca.csv  Boavista - Arouca.csv  Braga - Arouca.csv  Estoril - Arouca.csv  Famalicao - Arouca.csv  Gil Vicente - Arouca.csv  Maritimo - Arouca.csv  Moreirense - Arouca.csv  Pacos de Ferreira - Arouca.csv  Portimonense - Arouca.csv  Porto - Arouca.csv  Santa Clara - Arouca.csv  Sporting - Arouca.csv  Tondela - Arouca.csv  Vitoria de Guimaraes - Arouca.csv  Vizela - Arouca.csv
data/Belenenses-SAD/: Arouca - Belenenses SAD.csv  Belenenses SAD - Arouca.csv  (+32 more)
postgres_db/: models.py
scraping_scripts/: calcs.py  get_players_zerozero.py  helper.py  page_source.html  scraped-games-22-23.json  scraper.py  team-ids-22-23.json
scripts/: behavior.js  global.js  player_stats.js
style/: styles.css
(+617 files in other folders)
