[tool.poetry]
name = "LigaBwin2122"
version = "0.0.1"
description = "Liga Bwin Scraper"
authors = ["Tomás Sequeira <tomaslb26@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.3"
selenium = "^4.4.3"
bs4 = "^0.0.1"
webdriver-manager = "^3.8.3"
numpy = "^1.23.2"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
    py39 = true
    line-length = 120
    include = '\.pyi?$'
    exclude = '''
    /(
        \.git
      | \.hg
      | \.mypy_cache
      | \.tox
      | \.venv
      | _build
      | buck-out
      | build
      | dist

      # The following are specific to Black, you probably don't want those.
      | blib2to3
      | tests/data
    )/
    '''

